# BMM350-I3C-ESP32P4-Bringup

./: CMakeLists.txt  LICENSE  README.md  bmm350_defs.h  single_bmm350_i3c_SETAASA_main.c
driver/: bmm350.c  bmm350.h
esp32_i3c_port/: bmm350_port_esp32p4_i3c.c  bmm350_port_esp32p4_i3c.h
examples/: single_bmm350_i3c_entdaa_main.c  single_bmm350_i3c_setdasa_main.c
